Bug 248933 IMAP parser: end of line is not handled correctly while parsing quoted/literal strings patch by Hans-A.Engel@unibas.ch r=bienvenu sr=dmose